--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <ol>
             <li><a target="_blank" href="./Assignments/weekly_test_3.html">Weekly Test 3</a></li>
-            <li><a target="_blank" href="./Assignments/weekly_test_4.html">Weekly Test 4git </a></li>
+            <li><a target="_blank" href="./Assignments/weekly_test_4.html">Weekly Test 4</a></li>
         </ol>
     </main>
 </body>
