--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ol>
             <li><a target="_blank" href="./Assignments/weekly_test_3.html">Weekly Test 3</a></li>
             <li><a target="_blank" href="./Assignments/weekly_test_4.html">Weekly Test 4</a></li>
+            <li><a target="_blank" href="./Assignments/markers.html">CSS Classwork 2</a></li>
         </ol>
     </main>
 </body>
