--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li><a target="_blank" href="./Assignments/weekly_test_3.html">Weekly Test 3</a></li>
             <li><a target="_blank" href="./Assignments/weekly_test_4.html">Weekly Test 4</a></li>
             <li><a target="_blank" href="./Assignments/markers.html">CSS Classwork 2</a></li>
+            <li><a target="_blank" href="./Assignments/nutrition-label.html">CSS Classwork 3</a></li>
+            <li><a target="_blank" href="./Assignments/homework_3.html">CSS Homework 3</a></li>
         </ol>
     </main>
 </body>
