--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <li><a target="_blank" href="./Assignments/markers.html">CSS Classwork 2</a></li>
             <li><a target="_blank" href="./Assignments/nutrition-label.html">CSS Classwork 3</a></li>
             <li><a target="_blank" href="./Assignments/homework_3.html">CSS Homework 3</a></li>
+            <li><a target="_blank" href="./Assignments/homework_2.html">CSS Homework 2</a></li>
+            <li><a target="_blank" href="./Assignments/homework_4.html">CSS Homework 4</a></li>
         </ol>
     </main>
 </body>
