--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li><a target="_blank" href="./Assignments/homework_3.html">CSS Homework 3</a></li>
             <li><a target="_blank" href="./Assignments/homework_2.html">CSS Homework 2</a></li>
             <li><a target="_blank" href="./Assignments/homework_4.html">CSS Homework 4</a></li>
+            <li><a target="_blank" href="./Assignments/classwork_4.html">CSS Classwork 4</a></li>
+            <li><a target="_blank" href="./Assignments/Box-Model_CW_5.html">CSS Classwork 5</a></li>
+            <li><a target="_blank" href="./Assignments/homework_5.html">CSS Homework 5</a></li>
         </ol>
     </main>
 </body>
