Added Homework 6 and 8

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><a target="_blank" href="./Assignments/classwork_4.html">CSS Classwork 4</a></li>
             <li><a target="_blank" href="./Assignments/Box-Model_CW_5.html">CSS Classwork 5</a></li>
             <li><a target="_blank" href="./Assignments/homework_5.html">CSS Homework 5</a></li>
+            <li><a target="_blank" href="./Assignments/Homework_6.html">CSS Homework 6</a></li>
+            <li><a target="_blank" href="./Assignments/Homework_8.html">CSS Homework 8</a></li>
         </ol>
     </main>
 </body>
