--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a target="_blank" href="./Assignments/homework_5.html">CSS Homework 5</a></li>
             <li><a target="_blank" href="./Assignments/Homework_6.html">CSS Homework 6</a></li>
             <li><a target="_blank" href="./Assignments/Homework_8.html">CSS Homework 8</a></li>
+            <li><a target="_blank" href="./Assignments/Grid_Magazine.html">"Grid - Magazine</a></li>
         </ol>
     </main>
 </body>
