Added Classwork 9 and Homework 9

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a target="_blank" href="./Assignments/homework_5.html">CSS Homework 5</a></li>
             <li><a target="_blank" href="./Assignments/Homework_6.html">CSS Homework 6</a></li>
             <li><a target="_blank" href="./Assignments/Homework_8.html">CSS Homework 8</a></li>
+            <li><a target="_blank" href="./Assignments/homework_9.html">CSS Homework 9</a></li>
+            <li><a target="_blank" href="./Assignments/classwork_9.html">CSS Classwork 9</a></li>
             <li><a target="_blank" href="./Assignments/Grid_Magazine.html">"Grid - Magazine</a></li>
         </ol>
     </main>
